# Imbizo

./: .gitignore  CHANGELOG.md  CITATION.cff  INSTALL_OFFLINE.md  LICENSE  MANIFEST.in  Makefile  PRINCIPLES.md  README.md  pyproject.toml  requirements-offline.txt  requirements.txt
.github/: FUNDING.yml
LICENSES/: APACHE-2.0.txt  CC-BY-2.5-SA.txt  CC-BY-4.0.txt  CC-BY-NC-4.0.txt  CC-BY-NC-SA-2.5-ZA.txt  CC-BY-SA-3.0.txt  INDEX.md  MIT.txt  NWULITE-OBODO-1.0.txt  OER-UNISA.txt  PUBLIC-DOMAIN.txt  README.md
bootstrap/: sources.yaml
dictionaries/: README.md
dictionaries/concord/: sot.yaml  tsn.yaml  xho.yaml  zul.yaml
dictionaries/four_m/: afr.yaml  eng.yaml  sot.yaml  tsn.yaml  xho.yaml  zul.yaml
dictionaries/mixed_code/: iscamtho.yaml  kaaps.yaml  sabela.yaml  tsotsitaal.yaml
dictionaries/noun_classes/: sot.yaml  tsn.yaml  xho.yaml  zul.yaml
dictionaries/phonology/: afr.yaml  sot.yaml  tsn.yaml  xho.yaml  zul.yaml
dictionaries/sister_lang/: nso_vs_sot_vs_tsn.yaml  sot_vs_tsn.yaml  ssw_vs_zul.yaml  zul_vs_xho.yaml
dictionaries/triggers/: afr.yaml  eng.yaml  sot.yaml  tsn.yaml  xho.yaml  zul.yaml
docs/: ARCHITECTURE_OVERVIEW.md  DATA_MODEL.md  DELIVERABLES.md  DIRECTORY_LAYOUT.md  GUI_SPECIFICATIONS.md  MODULE_BREAKDOWN.md  REFERENCES.md  ROADMAP_PLUGINS.md  asr_quality.md  bootstrap_subsystem.md  community_review.md  dictionary_provenance.md  four_m_model.md  highlight_coding.md  interop_lides_chat.md  licence_audit.md  local_nlp_analysis.md  mixed_codes.md  noun_classes.md  phonological_integration.md  processing_resources.md  release_packaging.md  resource_provenance.md  sister_languages.md  triggers.md  visualisations.md
docs/accessibility/: high_contrast_theme.md  keyboard_navigation.md
docs/formulas/: burstiness.md  i_index.md  m_index.md  switch_density.md
docs/offline_verification/: dependency_inventory.md  network_audit.md
docs/v1_0/: DATA_MODEL_INCREMENT.md  DIRECTORY_LAYOUT.md  GUI_INCREMENT.md  INCREMENT_OVERVIEW.md  MIGRATION_AND_OFFLINE_UPGRADE.md  REPORTS_AND_EXPORTS.md  ROADMAP_AND_REFERENCES.md
docs/v1_5/: DATA_MODEL_INCREMENT.md  DIRECTORY_LAYOUT.md  GUI_INCREMENT.md  INCREMENT_OVERVIEW.md  MIGRATION_AND_OFFLINE_UPGRADE.md  REPORTS_AND_EXPORTS.md  ROADMAP_AND_REFERENCES.md
examples/: README.md
examples/demo_project_minimal/: README.md
packaging/linux/: README.md
packaging/pyinstaller/: imbizo-linux.spec  imbizo-windows.spec
packaging/windows/: README.md
scripts/: build_offline_wheelhouse.py  build_release.py  create_offline_bundle.py  package_linux.py  package_windows.py  release_check.py  verify_no_network.py  verify_offline_install.py
src/imbizo/: __init__.py  cli.py  main.py
src/imbizo/app/: __init__.py  errors.py  events.py  jobs.py  settings.py  strings.py  time.py
src/imbizo/audio/: __init__.py  (+3 more)
tests/: test_adapter_african_wordnet.py  test_adapter_exdn.py  test_adapter_fasttext_lid.py  test_adapter_mafoko.py  test_adapter_masakhaner.py  test_adapter_masakhapos.py  test_adapter_morph_annotated.py  test_adapter_nchlt_text.py  test_adapter_unisa_termbank.py  test_adapter_up_lexicons.py  test_adapter_whisper_cpp.py  test_adapter_za_lex.py  test_annotation_editor_actions.py  test_baseline_lid_integration.py  test_bootstrap_bundle.py  test_bootstrap_offline_guard.py  test_chat.py  test_check_compliance.py  test_community_review.py  test_concord.py  test_four_m.py  test_heatmap.py  test_highlight_coding.py  test_import_csv_xml.py  test_integration_score.py  test_integration_v2.py  test_interop_chat.py  test_interop_lides.py  test_licence_compatibility.py  test_lid_accuracy_service.py  test_lid_coarse_groups.py  test_lid_service.py  test_lides.py  test_metrics_dashboard_integration.py  test_metrics_dashboard_local_analysis.py  test_migration_v1_5.py  test_mixed_code.py  test_morph_annotated_loader.py  test_nlp_analysis_service.py  test_noun_class.py  (+10 more)
tests/unit/: test_core_annotation.py  test_core_io_eaf.py  test_core_metrics.py  test_mvp_workflow.py
tools/: bootstrap.py  check_compliance.py  check_offline_guard.py  make_bundle.py
tools/adapters/: __init__.py  african_wordnet.py  base.py  exdn.py  fasttext_lid.py  mafoko.py  masakhaner.py  masakhapos.py  morph_annotated.py  nchlt_text.py  unisa_termbank.py  up_lexicons.py  whisper_cpp.py  za_lex.py
tools/dev/: format_check.py  sample_project_builder.py
ui-prototype/: README.md  index.html  package-lock.json  package.json  vite.config.ts
ui-prototype/guidelines/: Guidelines.md
ui-prototype/src/: main.tsx
(+186 files in other folders)
