[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imbizo-cs-workbench"
version = "0.1.0"
description = "Offline-first code-switching analysis workbench for humanities research."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "GPL-3.0-or-later"}
authors = [
    {name = "Imbizo-CS Workbench Contributors"}
]
dependencies = ["pydantic>=2"]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
xlsx = ["openpyxl>=3.1"]
audio = ["soundfile>=0.12"]
security = ["cryptography>=42"]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
imbizo = "imbizo.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imbizo = [
    "resources/i18n/*.json",
    "resources/dictionaries/*.json",
    "resources/lid/*",
    "resources/templates/*",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
