[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imbizo-cs-workbench"
version = "1.5.0"
description = "Offline-first code-switching analysis workbench for humanities research."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Imbizo-CS Workbench Contributors"}
]
dependencies = ["click>=8", "pydantic>=2", "PyYAML>=6", "matplotlib>=3.8", "pandas>=2.0", "lxml>=5"]

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
xlsx = ["openpyxl>=3.1"]
audio = ["soundfile>=0.12"]
security = ["cryptography>=42"]
reports = ["Jinja2>=3.1", "WeasyPrint>=61"]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "mypy>=1.10"]

[project.scripts]
imbizo = "imbizo.main:main"
imbizo-cs = "imbizo.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imbizo = [
    "resources/i18n/*.json",
    "resources/dictionaries/*.json",
    "resources/lid/*",
    "resources/templates/*",
    "resources/templates/partials/*",
    "resources/templates/reports/*",
    "resources/gui/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
