[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "imbizo-cs-workbench"
version = "1.5.0"
description = "Offline-first code-switching analysis workbench for humanities research."
readme = "README.md"
requires-python = ">=3.11"
license = {text = "AGPL-3.0-or-later"}
authors = [
    {name = "Imbizo-CS Workbench Contributors"}
]
keywords = ["code-switching", "south-african-languages", "digital-humanities", "offline-first", "pyside6"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: GNU Affero General Public License v3 or later (AGPLv3+)",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Human Machine Interfaces",
    "Topic :: Text Processing :: Linguistic",
]
dependencies = ["click>=8", "pydantic>=2", "PyYAML>=6", "matplotlib>=3.8", "pandas>=2.0", "lxml>=5"]

[project.urls]
Homepage = "https://github.com/toutoutoubun/Imbizo"
Repository = "https://github.com/toutoutoubun/Imbizo"
Documentation = "https://github.com/toutoutoubun/Imbizo/tree/main/docs"
Issues = "https://github.com/toutoutoubun/Imbizo/issues"

[project.optional-dependencies]
gui = ["PySide6>=6.6"]
xlsx = ["openpyxl>=3.1"]
audio = ["soundfile>=0.12"]
security = ["cryptography>=42"]
reports = ["Jinja2>=3.1", "WeasyPrint>=61"]
dev = ["pytest>=8", "hypothesis>=6", "ruff>=0.5", "mypy>=1.10"]
release = ["build>=1.2", "twine>=5", "pyinstaller>=6"]

[project.scripts]
imbizo = "imbizo.main:main"
imbizo-cs = "imbizo.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
imbizo = [
    "resources/i18n/*.json",
    "resources/dictionaries/*.json",
    "resources/lid/*",
    "resources/templates/*",
    "resources/templates/partials/*",
    "resources/templates/reports/*",
    "resources/gui/*.yaml",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
